# aws-ec2-deploy

./: main.py  pyproject.toml
templates/: about.html  contact.html  index.html
